--- a/messenger/src/app/modules/chat/components/chats-list/chats-list.component.html
+++ b/messenger/src/app/modules/chat/components/chats-list/chats-list.component.html
@@ -26,12 +26,13 @@
   <ul class="chats-wrapper">
     <ng-container *ngIf="chats.length ; else emptyChatList">
       <app-chat-list-item
-        *ngFor="let chat of chats | filterChats: chatType: userId; trackBy:trackBy"
+        *ngFor="let chat of chats | filterChats: chatType: userId"
         [chat]="chat"
         [link]="link"
         [userId]="userId"
         [isSelectedChat]="chat.id === selectedChat?.id"
         (onDeleteChat)="deleteChat($event)"
+        (onEditChat)="onEditChat.emit($event)"
       ></app-chat-list-item>
     </ng-container>
     <ng-template #emptyChatList>
