--- a/messenger/src/app/modules/chat/components/chats-list/chats-list.component.scss
+++ b/messenger/src/app/modules/chat/components/chats-list/chats-list.component.scss
@@ -42,7 +42,7 @@
     }
   }
   &.selected {
-    background: $list-item-selected;
+    color: $button-hover;
     &:hover {
       background-color: $list-item-hover;
     }
