--- a/messenger/src/app/modules/chat/chat.component.scss
+++ b/messenger/src/app/modules/chat/chat.component.scss
@@ -48,7 +48,7 @@
   width: 65%;
   height: 100%;
   font-size: 30px;
-  text-shadow: 1px 1px $main-text-color;
+  font-weight: 700;
   @media(max-width: $md) {
     font-size: 20px;
     width: 55%;
