--- a/messenger/src/app/modules/chat/components/chat-room/chat-room.component.html
+++ b/messenger/src/app/modules/chat/components/chat-room/chat-room.component.html
@@ -8,7 +8,8 @@
       [message]="message"
       [isUser]="user?.userId === message.authorId"
       [userId]="user?.userId"
-      (onDeleteMessage)="onDeleteChat($event)"
+      (onDeleteMessage)="onDeleteMessage($event)"
+      (onEditMessage)="editMessage($event)"
       #chatItem
     ></app-chat-message>
   </ul>
@@ -17,7 +18,7 @@
     <input
       class="input"
       type="text"
-      (keydown.enter)="onEnter()"
+      (keydown.enter)="sendMessage()"
       [(ngModel)]="messageText"
       #input
       placeholder="Type your message here...">
