--- a/messenger/src/app/modules/layout/header/header.component.scss
+++ b/messenger/src/app/modules/layout/header/header.component.scss
@@ -13,6 +13,10 @@
   font-weight: 700;
 }
 
+.avatar {
+  margin-right: 5px;
+}
+
 .header-content {
   display: flex;
   justify-content: space-between;
