--- a/messenger/src/app/modules/chat/components/chat-list-item/chat-list-item.component.scss
+++ b/messenger/src/app/modules/chat/components/chat-list-item/chat-list-item.component.scss
@@ -61,14 +61,15 @@
 }
 
 .chats-link {
-  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   font-size: 16px;
   font-weight: 700;
   color: $header-bg;
   width: 100%;
   overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   transition: all 0.6s;
   cursor: pointer;
   @media (max-width: $md) {
@@ -86,7 +87,6 @@
 
 .chat-name {
   height: 17px;
-  display: block;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -94,9 +94,6 @@
 }
 
 .last-message {
-  display: block;
-  padding-top: 3px;
-  height: 16px;
   color: $chat-user-name;
   font-size: 12px;
   font-weight: 400;
