--- a/messenger/src/app/modules/chat/components/chat-list-item/chat-list-item.component.scss
+++ b/messenger/src/app/modules/chat/components/chat-list-item/chat-list-item.component.scss
@@ -34,13 +34,13 @@
 .edit-button {
   position: absolute;
   display: none;
-  right: -5px;
+  right: 0;
   top: 0;
   background: none;
 }
 
 .edit-button {
-  right: 20px;
+  right: 25px;
   top: 0
 }
 
