--- a/messenger/src/app/modules/chat/chat.component.html
+++ b/messenger/src/app/modules/chat/chat.component.html
@@ -12,10 +12,8 @@
 </button>
 <div class="chats" [ngClass]="{'chats-open': isChatsOpen}">
   <app-chats-list
-    *ngIf="chats"
     [chats]="chats"
     [userId]="userService.userInfo$.getValue()?.userId"
-    [link]="'chat'"
     [isPrivateList]="false"
     [selectedChat]="selectedChat"
     (onDeleteChat)="deleteChat($event)"
@@ -23,21 +21,6 @@
     (onOpenDialog)="openDialog()"
   ></app-chats-list>
 </div>
-<div class="chat-room" *ngIf="isSelectedChat; else welcome">
-  <app-chat-room
-    [selectedChat]="selectedChat"
-    [messages]="messages"
-    [user]="user"
-    (isOpenChat)="isChatsOpen = false"
-    (deleteMessage)="deleteMessage($event)"
-    (onSendMessage)="sendMessage($event)"
-    (onEditMessage)="editMessage($event)"
-  ></app-chat-room>
+<div class="chat-room">
+  <router-outlet></router-outlet>
 </div>
-
-<ng-template #welcome>
-  <div class="welcome-chat-room">
-    Please select a chat
-  </div>
-</ng-template>
-
